--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://powarox2159.github.io/TodoList/dist/index.html">
+<meta http-equiv="refresh" content="0; url=https://powarox.github.io/Front-TodoList/dist/index.html">
